@@ -163,7 +163,13 @@ namespace optimization
 
   CFSQPSolver::CFSQPSolver (const problem_t& pb, int iprint) throw ()
     : parent_t (pb),
-      iprint_ (iprint)
+      mode_ (100),
+      iprint_ (iprint),
+      miter_ (500),
+      bigbnd_ (1e10),
+      eps_ (1e-8),
+      epseqn_ (1e-8),
+      udelta_ (1e-8)
   {
   }
 
@@ -198,13 +204,7 @@ namespace optimization
     int ncsrl = 0;
     int ncsrn = 0;
     int mesh_pts[1];
-    int mode = 100;
-    int miter = 500;
     int inform = 0;
-    double bignd = 1e10;
-    double eps = 1e-8;
-    double epseqn = 1e-8;
-    double udelta = 1e-8;
     double bl[nparam];
     double bu[nparam];
     double x[nparam];
@@ -224,8 +224,8 @@ namespace optimization
       detail::vector_to_array (x, *problem ().startingPoint ());
 
     cfsqp (nparam, nf, nfsr, nineqn, nineq, neqn, neq, ncsrl,  ncsrn,
-           mesh_pts, mode,  iprint_, miter, &inform, bignd, eps, epseqn,
-           udelta, bl, bu, x, f, g, lambda,
+           mesh_pts, mode_,  iprint_, miter_, &inform, bigbnd_, eps_, epseqn_,
+           udelta_, bl, bu, x, f, g, lambda,
            obj, constr, gradob, gradcn, this);
 
     if (inform == 0)
@@ -236,6 +236,99 @@ namespace optimization
       }
     else
       result_ = SolverError ("CFSQP has failed.");
+  }
+
+  int&
+  CFSQPSolver::mode () throw ()
+  {
+    reset ();
+    return mode_;
+  }
+
+  const int&
+  CFSQPSolver::mode () const throw ()
+  {
+    return mode_;
+  }
+
+
+  int&
+  CFSQPSolver::iprint () throw ()
+  {
+    reset ();
+    return iprint_;
+  }
+
+  const int&
+  CFSQPSolver::iprint () const throw ()
+  {
+    return iprint_;
+  }
+
+
+  int&
+  CFSQPSolver::miter () throw ()
+  {
+    reset ();
+    return miter_;
+  }
+
+  const int&
+  CFSQPSolver::miter () const throw ()
+  {
+    return miter_;
+  }
+
+  double&
+  CFSQPSolver::bigbnd () throw ()
+  {
+    reset ();
+    return bigbnd_;
+  }
+
+  const double&
+  CFSQPSolver::bigbnd () const throw ()
+  {
+    return bigbnd_;
+  }
+
+  double&
+  CFSQPSolver::eps () throw ()
+  {
+    reset ();
+    return eps_;
+  }
+
+  const double&
+  CFSQPSolver::eps () const throw ()
+  {
+    return eps_;
+  }
+
+  double&
+  CFSQPSolver::epseqn () throw ()
+  {
+    reset ();
+    return epseqn_;
+  }
+
+  const double&
+  CFSQPSolver::epseqn () const throw ()
+  {
+    return epseqn_;
+  }
+
+  double&
+  CFSQPSolver::udelta () throw ()
+  {
+    reset ();
+    return udelta_;
+  }
+
+  const double&
+  CFSQPSolver::udelta () const throw ()
+  {
+    return udelta_;
   }
 
 } // end of namespace optimization
